--- a/jbake.properties
+++ b/jbake.properties
@@ -1,11 +1,8 @@
-site.host=https://manikmagar.github.io/jbake-future-imperfect-template
+site.host=https://darestiet.de
 site.title=JBake Blog
 
-site.author=Manik Magar
+site.author=Darestiet
 site.author.avatar=img/main/avatar.png
-
-site.disqus.shortname=
-site.google.trackingid=
 
 #ReadTimes are displayed using https://github.com/michael-lynch/reading-time
 site.includeReadTime=true
@@ -30,7 +27,6 @@ site.menus.main.archive.url=archive.html
 site.menus.main.archive.icon=fa fa-archive
 
 site.menus.main.rss.label=Subscribe
-## change below url to feed.xml for tradional RSS Feed
 site.menus.main.rss.url=feed.xml
 site.menus.main.rss.icon=fa fa-rss
 
@@ -60,34 +56,7 @@ sidebar.intro.about.learnMore=about.html
 
 # Social links are shown when related id's are mentioned
 sidebar.social.show = true
-sidebar.social.github          = manikmagar
-sidebar.social.bitbucket       =
-sidebar.social.jsfiddle        =
-sidebar.social.codepen         =
-sidebar.social.foursquare      =
-sidebar.social.dribbble        =
-sidebar.social.deviantart      =
-sidebar.social.behance         =
-sidebar.social.flickr          =
-sidebar.social.instagram       =
-sidebar.social.youtube         =
-sidebar.social.vimeo           =
-sidebar.social.vine            =
-sidebar.social.medium          =
-sidebar.social.wordpress       =
-sidebar.social.tumblr          =
-sidebar.social.xing            =
-sidebar.social.linkedin        =
-sidebar.social.slideshare      =
-sidebar.social.stackoverflow   =
-sidebar.social.reddit          =
-sidebar.social.pinterest       =
-sidebar.social.googleplus      =
-sidebar.social.facebook        =
-sidebar.social.facebook_admin  =
-sidebar.social.twitter_domain  =
-sidebar.social.twitter         = manikmagar
-sidebar.social.email           =
+sidebar.social.email = 
 
 
 index.paginate=true
